# feature-factory

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml
assets/: pipeline_architecture.dot  transformer_architecture.dot
examples/: basic_usage.rs  shared.rs
src/: exceptions.rs  lib.rs  logging.rs  pipeline.rs  settings.rs
src/transformers/: categorical.rs  categorical_encoding.rs  datetime.rs  datetime_features.rs  discretization.rs  feature_creation.rs  feature_selection.rs  imputation.rs  mod.rs  numerical.rs  numerical_transformations.rs  outlier_handling.rs  outliers.rs  variable_discretization.rs
tests/: test_core_pipeline.rs  test_transformers_categorical.rs  test_transformers_datetime.rs  test_transformers_discretization.rs  test_transformers_feature_creation.rs  test_transformers_feature_selection.rs  test_transformers_imputation.rs  test_transformers_numerical.rs  test_transformers_outliers.rs  transformers_categorical_encoding_tests.rs  transformers_feature_creation_tests.rs  transformers_imputation_tests.rs  transformers_numerical_transformations_tests.rs  transformers_outlier_handling_tests.rs  transformers_variable_discretization_tests.rs  transforms_datetime_features_tests.rs
tests/testdata/: data1.csv  data1.parquet
