[package]
name = "feature-factory"
version = "0.1.0"
description = "A feature engineering and selection library for Rust"
repository = "https://github.com/habedi/feature-factory"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["feature-engineering", "machine-learning", "data-science", "feature-selection", "feature-extraction"]
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
homepage = "https://github.com/habedi/feature-factory"
documentation = "https://docs.rs/feature-factory"
categories = ["development-tools", "algorithms", "data-structures"]
edition = "2021"
rust-version = "1.83"

resolver = "2"

include = [
    "docs/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE"
]

[lib]
name = "feature_factory"
path = "src/lib.rs"

[features]
default = []  # No features enabled by default
binaries = []

[dependencies]
arrow = "54.2.1"
ctor = "0.4.0"
datafusion = "45.0.0"
parquet = "54.2.1"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2"
rand = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "project_benchmarks"
harness = false

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true

[profile.bench]
debug = true
