[package]
name = "feature-factory"
version = "0.1.1-alpha"
description = "A high-performance feature engineering library for Rust powered by Apache DataFusion"
repository = "https://github.com/habedi/feature-factory"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["feature-engineering", "machine-learning", "data-science", "feature-selection", "feature-extraction"]
authors = ["Hassan Abedi <hassan.abedi.t@gmail.com>"]
homepage = "https://github.com/habedi/feature-factory"
documentation = "https://docs.rs/feature-factory"
categories = ["development-tools", "algorithms", "data-structures"]
edition = "2021"
rust-version = "1.83"

resolver = "2"

include = [
    "docs/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE"
]

[lib]
name = "feature_factory"
path = "src/lib.rs"

[features]
default = []  # No features enabled by default
binaries = []

[dependencies]
arrow = "54.2.1"
ctor = "0.4.0"
parquet = "54.2.1"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2"
datafusion = "46.0.0"
datafusion-expr = "46.0.0"
datafusion-functions = "46.0.0"
approx = "0.5.1"
async-trait = "0.1.87"
futures = "0.3.31"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "project_benchmarks"
harness = false

[profile.release]
strip = "debuginfo"
panic = "abort"
codegen-units = 1
lto = true

[profile.bench]
debug = true

[profile.test]
debug = true

[profile.example]
inherits = "release"

